--- a/KitbioCefApp/src/main/java/com/cis/frames/JFrameLogin.form
+++ b/KitbioCefApp/src/main/java/com/cis/frames/JFrameLogin.form
@@ -159,7 +159,7 @@
               <Connection code="new EmptyBorder(0, 10, 0, 0)" type="code"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Text Cursor"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
           <Events>
@@ -240,6 +240,9 @@
               <Color id="Default Cursor"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
